--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.8.10</aspectj.version>
         <testng.version>7.6.1</testng.version>
+
+        <test.suite.filename>general.xml</test.suite.filename>
     </properties>
 
     <dependencies>
@@ -33,6 +35,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -46,7 +53,8 @@
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <suiteXmlFiles>
-                        <suiteXmlFile>target/test-classes/group.xml</suiteXmlFile>
+<!--                        <suiteXmlFile>target/test-classes/${test.suite.filename}</suiteXmlFile>-->
+<!--                        <suiteXmlFile>target/test-classes/${xmlSuiteFilename}</suiteXmlFile>-->
                     </suiteXmlFiles>
                 </configuration>
                 <dependencies>
@@ -56,6 +64,16 @@
                         <version>${aspectj.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <reportVersion>2.7.0</reportVersion>
+                    <buildDirectory>.</buildDirectory>
+                    <reportDirectory>target/allure-result</reportDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
