--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.8.10</aspectj.version>
         <testng.version>7.6.1</testng.version>
+        <selenium-java.version>4.4.0</selenium-java.version>
+        <webdrivermanager>5.2.1</webdrivermanager>
     </properties>
 
     <dependencies>
@@ -26,12 +28,12 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.4.0</version>
+            <version>${selenium-java.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.2.1</version>
+            <version>${webdrivermanager}</version>
         </dependency>
     </dependencies>
 
