--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,9 @@
-url=https://aqa21.testrail.io/
+url=https://www.saucedemo.com/inventory.html
 browser=chrome
 headless=false
-username=atrostyanko+aqa21@gmail.com
-password=Qwertyu#1
+username=standard_user
+password=secret_sauce
+firstName=Anna
+lastName=Ivanova
+postalCode=220020
 timeout=10
