--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
-
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -41,9 +40,18 @@
             <version>2.19.0</version>
         </dependency>
         <dependency>
+            <groupId></groupId>
+            <artifactId></artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-maven-plugin</artifactId>
-            <version>1.18.20.0</version>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.2.0</version>
         </dependency>
     </dependencies>
 
