--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,9 +1,6 @@
-url=https://www.saucedemo.com/
+url=https://aqa2101.testrail.io/
 browser=chrome
 headless=false
-username=standard_user
-password=secret_sauce
-firstName=John
-lastName=Doe
-zip=12345
+username=atrostyanko+aqa21@gmail.com
+password=Qwertyu#1
 timeout=10
