--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,9 @@
-url=https://aqa2101.testrail.io/
+url=https://www.saucedemo.com/inventory.html
 browser=chrome
 headless=false
-username=atrostyanko+aqa21@gmail.com
-password=Qwertyu#1
+username=standard_user
+password=secret_sauce
+firstName=Alisa
+lastName=Seconds
+postalCode=12345
 timeout=10
