--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,16 @@
-url=https://aqa2102.testrail.io/
+url=https://www.saucedemo.com/
 browser=chrome
 headless=false
-username=atrostyanko+aqa21@gmail.com
-password=Qwertyu#1
+usernameStandard=standard_user
+usernameBlocked=locked_out_user
+usernameProblem=problem_user
+usernamePerformanceGlitch=performance_glitch_user
+password=secret_sauce
 timeout=10
+twiter=https://twitter.com/saucelabs
+facebook=https://www.facebook.com/saucelabs
+firstName=Nikita
+lastName=Kunitsa
+postalCode=13684
+succsfullCheckout=https://www.saucedemo.com/checkout-complete.html
+
